css/base.css
body {
    color: #e2e2e2;
    background-color: rgb(61, 63, 71);
    font-family: 'Open Sans', sans-serif;
    line-height: 120%;
}

h1 {
    font-size: 16pt;
    font-weight: bold;
}

a {
    color: deepskyblue;
}

#header {
    font-size: 40px; font-weight:bold; letter-spacing: -1px; line-height: 60px;
    color: rgba(255, 255, 255, 0.62); background-color: rgba(38, 31, 40, 0.3);
    height: 60px;
    padding: 12px 0 12px 262px;
    position: absolute;
    top: 30px; left:0; right: 0;
}

#footer {
    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.3) 100%);
    font-size: 12px; font-style: italic; text-align: right;
    width: 100%;
    padding: 4px 24px;
    position: absolute; z-index:-1;
    bottom:0px; right: 0px;
}

#menu {
    font-size:16px;
    background-color: rgba(38, 31, 40, 0.3);
    padding: 164px 12px 0px 12px;
    position: absolute;
    width:160px;
    top: 0; bottom: 0; left: 30px;
}

#menu li{
    color: deepskyblue;
    font-weight: bold;
    text-align: center;
    padding: 0 0 8px 0;
}

#menu li:hover{
    background-color: rgba(38, 31, 40, 0.3);
}

#cv {
    overflow-y: scroll;
    padding: 12px 0 48px 48px;
    position: absolute;
    top: 120px; bottom: 0px; left: 214px;
}

#cv h1, #cv h2 {
    font-family: 'Merriweather', serif;
}

#cv h1 {
    color: greenyellow;
    margin-top:32px;
}

#cv h2 {
    color: orangered;
    font-size: 16px; font-style: italic; font-weight:bold;
    margin: 12px 0 4px 0;
}

#cv p, #cv ul {
    max-width: 40%;
    font-size:14px; font-style: italic;
    margin: 4px 0 4px 12px;
}
#cv b {
    color: white;
    font-weight: bold;
}

